--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -3,13 +3,14 @@
   font-weight: 900;
   text-transform: uppercase;
   padding: 0 1rem;
+  color: white;
 }
 
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
+  /* background-color: white; */
   padding: 1rem;
   height: 70px;
 }
@@ -34,6 +35,7 @@
   font-weight: 900;
   font-size: 1.3rem;
   text-decoration: none;
+  color: white;
 }
 
 .element:hover {
@@ -90,7 +92,7 @@
     height: 4px;
     width: 100%;
     margin-bottom: 5px;
-    background: black;
+    background: white;
     border-radius: 3px;
     z-index: 100;
     opacity: 1;
@@ -162,7 +164,7 @@
     top: 35px;
     left: 0;
     z-index: 2;
-    background-color: white;
+    background-color: #1d1d1d;
     max-height: 500px;
     transition: max-height 0.5s;
     border-top: 1px solid black;
@@ -185,6 +187,7 @@
     opacity: 1;
     transition: opacity 0.5s;
     text-transform: uppercase;
+    color: white;
   }
   .elementMobile:hover {
     color: red;
