--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -4,6 +4,7 @@
   text-transform: uppercase;
   padding: 0 1rem;
   color: white;
+  z-index: 1;
 }
 
 .navbar {
@@ -13,6 +14,7 @@
   /* background-color: white; */
   padding: 1rem;
   height: 70px;
+  z-index: 1;
 }
 
 .burger {
@@ -167,14 +169,14 @@
     background-color: #1d1d1d;
     max-height: 500px;
     transition: max-height 0.5s;
-    border-top: 1px solid black;
-    border-bottom: 1px solid black;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
     overflow: hidden;
   }
   .li {
     display: block;
     width: 100%;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid white;
   }
 
   .elementMobile {
@@ -188,6 +190,7 @@
     transition: opacity 0.5s;
     text-transform: uppercase;
     color: white;
+    background-color: #1d1d1d;
   }
   .elementMobile:hover {
     color: red;
