--- a/styles/CreateTournaement.module.css
+++ b/styles/CreateTournaement.module.css
@@ -65,7 +65,7 @@
   min-width: 100vw;
   position: relative;
   right: 0vw;
-  transition: right 0.5s ease-out;
+  transition: right 0.3s ease-out;
 }
 
 .labelWrapper {
@@ -75,9 +75,11 @@
 .label {
   font-size: 2rem;
   font-weight: 900;
+  margin: 0 1rem;
   margin-bottom: 0.5em;
   color: rgb(48, 48, 48);
   text-transform: uppercase;
+  text-align: center;
 }
 .info {
   font-size: 1.8rem;
@@ -110,6 +112,7 @@
   color: orange;
   padding: 0.25em 1em;
   border-radius: 1em;
+  text-align: centerh;
 }
 
 .input {
@@ -164,25 +167,28 @@
 .recap {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  width: 100%;
   justify-content: space-around;
   width: min-content;
   color: white;
   margin-top: 2rem;
-  width: 1000px;
+  width: 100%;
 }
 
 .recapElement {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-bottom: 1rem;
   background-color: rgb(29, 29, 29);
   padding: 1rem;
+  width: 800px;
 }
 
 .recapElementName {
   font-size: 2rem;
   font-weight: 900;
-  white-space: nowrap;
   text-align: center;
 }
 
@@ -228,9 +234,114 @@
   background-color: rgb(245, 110, 110);
 }
 
+.yes {
+  background-color: rgb(13, 155, 0);
+  margin-left: 2rem;
+}
+
+.no {
+  background-color: rgb(240, 8, 8);
+  margin-right: 2rem;
+}
+
+.yes,
+.no {
+  font-size: 1.8rem;
+  padding: 0.25em 1em;
+  border-radius: 1em;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin-bottom: 2rem;
+  width: 140px;
+}
+
+.yes:hover {
+  background-color: rgb(88, 180, 80);
+}
+
+.no:hover {
+  background-color: rgb(245, 110, 110);
+}
+
+.checkboxWrapper {
+  display: flex;
+  margin-bottom: 1rem;
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkboxInput {
+  margin-right: 1rem;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0.25rem;
+  left: 0;
+  height: 30px;
+  width: 30px;
+  background-color: #eee;
+  border: 4px solid orange;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkboxWrapper input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkboxWrapper .checkmark:after {
+  left: 7px;
+  top: 2px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 5px 5px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+/* On mouse-over, add a grey background color */
+.checkboxWrapper:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkboxWrapper input:checked ~ .checkmark {
+  background-color: orange;
+}
+
+.checkboxLabel {
+  font-size: 2rem;
+  font-weight: 700;
+  color: rgb(48, 48, 48);
+}
+
 @media all and (max-width: 900px) {
   .title {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   .tuto {
     font-size: 1.1rem;
@@ -254,5 +365,8 @@
   }
   .infoBlock {
     top: 3rem;
+  }
+  .recapElement {
+    width: 100%;
   }
 }
