--- a/styles/CreateTournaement.module.css
+++ b/styles/CreateTournaement.module.css
@@ -81,19 +81,28 @@
   text-transform: uppercase;
   text-align: center;
 }
-.info {
-  font-size: 1.8rem;
+
+.sublabel {
+  font-size: 1.4rem;
   font-weight: 900;
   color: rgb(48, 48, 48);
-  border: 5px solid rgb(48, 48, 48);
+  margin-bottom: 1rem;
+}
+
+.info {
+  font-size: 1.2rem;
+  font-weight: 900;
+  color: rgb(48, 48, 48);
+  border: 4px solid rgb(48, 48, 48);
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-left: 1rem;
   cursor: pointer;
+  position: relative;
 }
 
 .info:hover {
@@ -112,7 +121,7 @@
   color: orange;
   padding: 0.25em 1em;
   border-radius: 1em;
-  text-align: centerh;
+  text-align: center;
 }
 
 .input {
@@ -220,10 +229,12 @@
 .correct,
 .create {
   font-size: 1.8rem;
-  padding: 0.25em 1em;
+  font-weight: 700;
+  padding: 0.4em 1em;
   border-radius: 1em;
   border: none;
   cursor: pointer;
+  width: 180px;
 }
 
 .create:hover {
@@ -298,7 +309,7 @@
   border: 4px solid orange;
 }
 
-/* Create the checkmark/indicator (hidden when not checked) */
+/* Create the tick (hidden when not checked) */
 .checkmark:after {
   content: '';
   position: absolute;
@@ -310,7 +321,7 @@
   display: block;
 }
 
-/* Style the checkmark/indicator */
+/* Style the tick */
 .checkboxWrapper .checkmark:after {
   left: 7px;
   top: 2px;
@@ -348,6 +359,7 @@
   }
   .label {
     font-size: 1.8rem;
+    margin-top: 1rem;
   }
   .input {
     width: 95vw;
@@ -363,10 +375,21 @@
   .create {
     margin-left: 0.5rem;
   }
+  .info {
+    margin-top: 1rem;
+  }
   .infoBlock {
     top: 3rem;
   }
+  .chipWrapper {
+    flex-direction: column;
+    margin: 0 auto;
+    align-items: center;
+  }
   .recapElement {
     width: 100%;
+  }
+  .chipButton {
+    margin: 1rem auto;
   }
 }
